force-app/main/default/objects/Installation_Checklist__mdt/Installation_Checklist__mdt.object-meta.xml
<CustomObject>
    <label>Installation Checklist</label>
    <pluralLabel>Installation Checklists</pluralLabel>
</CustomObject>