force-app/main/default/objects/Installation_Checklist__mdt/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation</label>
    <type>Checkbox</type>
</CustomField>