force-app/main/default/objects/Installation_Checklist__mdt/fields/Installation_Question__c.field-meta.xml
<CustomField>
    <fullName>Installation_Question__c</fullName>
    <label>Installation Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>