force-app/main/default/objects/Installation_Checklist__mdt/fields/Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>Installation_Type__c</fullName>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Installation</fullName>
                <default>true</default>
                <label>Before Installation</label>
            </value>
            <value>
                <fullName>After Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>