force-app/main/default/objects/Installation_Checklist__mdt/fields/S_No__c.field-meta.xml
<CustomField>
    <fullName>S_No__c</fullName>
    <label>S.No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>